Check scrollbars before hit testing border radius

This patch fixes a regression from [1] where scrollbar hit testing
would be ignored if a border radius was present. By excluding hit tests
on the scrollbars (included in overflowClipRect(...)), we now properly
give scrollbars precedence over border radius.

[1] https://crrev.com/b6749c9b582f70fc9a5dcb364087e30cf45a7306

BUG=597946

Review URL: https://codereview.chromium.org/1897753002

Cr-Commit-Position: refs/heads/master@{#387999}